<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>


	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
	</parent>


	<groupId>ca.gov.dts-stn.passport</groupId>
	<artifactId>passport-status-api</artifactId>
	<version>${revision}</version>
	<packaging>jar</packaging>


	<developers>
		<developer>
			<name>Greg Baker</name>
			<email>gregory.j.baker@hrsdc-rhdcc.gc.ca</email>
		</developer>
		<developer>
			<name>Sébastien Comeau</name>
			<email>sebastien.comeau@hrsdc-rhdcc.gc.ca</email>
		</developer>
	</developers>


	<properties>
		<revision>0.0.0</revision>

		<!-- container image parameters -->

		<image.registry>dtsdevcontainers.azurecr.io</image.registry>
		<image.name>passport-status-api</image.name>

		<!-- build configuration parameters -->

		<java.version>17</java.version>
		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
		<spring-boot.build-image.builder>gcr.io/paketo-buildpacks/builder:base</spring-boot.build-image.builder>
		<spring-boot.build-image.runImage>gcr.io/paketo-buildpacks/run:full-cnb</spring-boot.build-image.runImage>
		<spring-boot.build-image.imageName>${image.registry}/${image.name}</spring-boot.build-image.imageName>

		<!-- dependency/plugin versions -->

		<datafaker.version>1.6.0</datafaker.version>
		<dependency-check-maven.version>7.2.1</dependency-check-maven.version>
		<duplicate-finder-maven-plugin.version>1.5.1</duplicate-finder-maven-plugin.version>
		<gitlog-maven-plugin.version>1.13.17</gitlog-maven-plugin.version>
		<immutables.version>2.9.2</immutables.version>
		<mapstruct.version>1.5.3.Final</mapstruct.version>
		<spring-boot-configuration-processor.version>2.7.4</spring-boot-configuration-processor.version>
		<springdoc.version>1.6.11</springdoc.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-dynatrace</artifactId>
		</dependency>
		<dependency>
			<groupId>net.datafaker</groupId>
			<artifactId>datafaker</artifactId>
			<version>${datafaker.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-jms-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>annotate</artifactId>
			<version>${immutables.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-hateoas</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-security</artifactId>
			<version>${springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>

		<!-- Spring dependencies -->

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-artemis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- optional/provided dependencies -->

		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>builder</artifactId>
			<version>${immutables.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>value</artifactId>
			<version>${immutables.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>

		<!-- test dependencies -->

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>com.github.danielflower.mavenplugins</groupId>
				<artifactId>gitlog-maven-plugin</artifactId>
				<version>${gitlog-maven-plugin.version}</version>
				<configuration>
					<generatePlainTextChangeLog>false</generatePlainTextChangeLog>
					<generateSimpleHTMLChangeLog>false</generateSimpleHTMLChangeLog>
					<outputDirectory>${project.build.outputDirectory}</outputDirectory>
				</configuration>
				<executions>
					<execution>
						<?m2e execute onConfiguration, onIncremental?>
						<phase>compile</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.immutables</groupId>
							<artifactId>builder</artifactId>
							<version>${immutables.version}</version>
						</path>
						<path>
							<groupId>org.immutables</groupId>
							<artifactId>value</artifactId>
							<version>${immutables.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${spring-boot-configuration-processor.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<compilerArg>-Amapstruct.unmappedTargetPolicy=ERROR</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/application-local.yml</exclude>
						<exclude>**/application-local.yaml</exclude>
						<exclude>**/application-local.properties</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.basepom.maven</groupId>
				<artifactId>duplicate-finder-maven-plugin</artifactId>
				<version>${duplicate-finder-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>${dependency-check-maven.version}</version>
				<configuration>
					<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
					<nugetconfAnalyzerEnabled>false</nugetconfAnalyzerEnabled>
					<nuspecAnalyzerEnabled>false</nuspecAnalyzerEnabled>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<configuration>
					<abbrevLength>8</abbrevLength>
					<verbose>false</verbose>
				</configuration>
				<executions>
					<execution>
						<id>generate-build-version</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<configuration>
							<dateFormat>yyyyMMdd-HHmmss</dateFormat>
							<generateGitPropertiesFile>false</generateGitPropertiesFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>